# eLarge

./: Cargo.toml  README.md
src/: cursor.rs  editor.rs  files.rs  highlight.rs  input.rs  main.rs  settings.rs  transaction.rs
src/features/: line_numbers.rs  mod.rs
src/snippets/: formatter.rs  function.rs  grammer.rs  mod.rs  snippet.rs
